# csp-billing-adapter-k8s

./: CHANGES.md  CONTRIBUTING.md  MANIFEST.in  README.md  csp-billing-adapter-k8s.spec  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci-workflow.yml
charts/: chart.yaml  ns.yaml  values.yaml
charts/templates/: clusterrole.yaml  clusterrolebinding.yaml  crd.yaml  deployment.yaml  role.yaml  rolebinding.yaml  serviceaccount.yaml
csp_billing_adapter_k8s/: plugin.py
manifests/: container_deploy.yaml  rbac.yaml  sa.yaml  ur.yaml  usage.yml
tests/unit/: conftest.py  test_plugin.py
