[bumpversion]
current_version = 0.0.1
commit = True
tag = True

[bumpversion:file:setup.py]

[bumpversion:file:csp_billing_adapter_k8s/__init__.py]

[bumpversion:file:csp-billing-adapter-k8s.spec]

[tool:pytest]
testpaths = tests

[coverage:report]
fail_under = 90

[metadata]
license_file = LICENSE
